# FC_Oesia

./: .gitignore  CMakeLists.txt  Funciones.cpp  Funciones.h  Gestion_parentesis.cpp  Gestion_parentesis.h  Posicion_abs.cpp  Posicion_abs.h  README.md  algo.txt  area.cpp  area.h  aux.cpp  launch.sh  main.cpp  split.cpp  utils.cpp  utils.h
output/: mesnaje  message
test_gestion_parentesis/: Gestion_parentesis.cpp
test_gestion_parentesis/tests/: CMakeLists.txt
tests/: CMakeLists.txt  CalculadoraTest.cpp  Test_Poscion_test.cpp  Test_area.cpp  Test_funciones_cpp.cpp
tests/test_gestion_parentesis/tests/: GestionParentesisTest.cpp
tests/tests_area/: tests_area.cpp
tests/tests_posiciones/: Test_Posicion.cpp  test_posicion.cpp
tests_area/: tests_area.cpp
